hive-observer/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hive-observer
  labels:
    app: hive-observer
    app.kubernetes.io/part-of: lab
spec:
  podSelector:
    matchLabels:
      app: hive-observer
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.1.234/32
      ports:
        - { protocol: TCP, port: 8080 }
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hive
      ports:
        - { protocol: TCP, port: 3002 }
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
